# pico-nand

./: CMakeLists.txt  README.md  nand.c  nand.pio
